<resources>
    <string name="app_name">PracticaFinal</string>
    <string name="intent">Intent</string>
    <string name="ficheros">Ficheros</string>
    <string name="practica_final_parte1">Practica Final Parte1</string>
    <string name="sqlite">SQLite</string>
    <string name="sharedprefs">SharedPrefs</string>
    <string name="enviar">Enviar</string>
    <string name="introduce_el_telefono">Introduce el Telefono</string>
    <string name="telefono">Telefono</string>
    <string name="introduce_el_tel_fono">Introduce el Teléfono</string>
    <string name="tel_fono">Teléfono</string>
    <string name="el_tel_fono_es">El teléfono es:</string>
    <string name="textview">TextView</string>
    <string name="volver">Volver</string>
    <string name="multi">*</string>
    <string name="suma">+</string>
    <string name="resta">-</string>
    <string name="punto">.</string>
    <string name="divi">/</string>
    <string name="_0">0</string>
    <string name="_1">1</string>
    <string name="_2">2</string>
    <string name="_3">3</string>
    <string name="_4">4</string>
    <string name="_5">5</string>
    <string name="_6">6</string>
    <string name="_7">7</string>
    <string name="_8">8</string>
    <string name="_9">9</string>
    <string name="igual">=</string>
    <string name="c">C</string>
    <string name="guardar_resultado">Guardar resultado</string>
    <string name="base_de_datos">Base de datos</string>
    <string name="identificador_producto">Identificador Producto:</string>
    <string name="producto">Producto</string>
    <string name="nombre_bbdd">Nombre BBDD</string>
    <string name="crear">Crear</string>
    <string name="actualizar">Actualizar</string>
    <string name="consultar">Consultar</string>
    <string name="eliminar">Eliminar</string>
    <string name="insertar">Insertar</string>
    <string name="marca">Marca:</string>
    <string name="nombre">Nombre:</string>
    <string name="precio">Precio:</string>
    <string name="tipo">Tipo:</string>
    <string name="id_tipo_marca_nombre_precio">-----Id-------Tipo-----Marca------Nombre-----Precio------</string>
    <string name="memoria_interna">Memoria Interna</string>
    <string name="atras">Atras</string>
    <string name="memoria_externa">Memoria Externa</string>
    <string name="memoria_en_raw">Memoria en /Raw</string>
    <string name="atras2">Atras</string>
    <string name="tipo_de_memoria">Tipo de Memoria:</string>
    <string name="nombre_del_fichero">Nombre del Fichero:</string>
    <string name="texto_del_fichero">Texto del Fichero:</string>
    <string name="startactivityforresult">StartActivityForResult</string>
    <string name="marca2">Marca:</string>
    <string name="tipo2">Tipo:</string>
    <string name="aceptar">Aceptar</string>
    <string name="cancelar">Cancelar</string>
    <string name="datos">Datos</string>
</resources>
