<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_memorias"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.jordi.practicafinal.memorias.Memorias">

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_alignParentStart="true">

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            tools:ignore="UselessParent">

            <Button
                android:text="@string/memoria_interna"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/interna" />

            <Button
                android:text="@string/memoria_externa"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/externa" />

            <Button
                android:text="@string/memoria_en_raw"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/raw" />
        </LinearLayout>
    </LinearLayout>

    <Button
        android:text="@string/atras"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentStart="true"
        android:id="@+id/atras" />
</RelativeLayout>
