<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_sql2"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.jordi.practicafinal.SQLite.ActivitySql2">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:ignore="UselessParent">

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            tools:ignore="UselessParent">

            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">

                <TextView
                    android:text="@string/producto"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/textView3"
                    android:textSize="24sp"
                    android:textColor="@android:color/background_dark"
                    android:paddingBottom="10dp"
                    android:layout_weight="1"
                    android:paddingRight="15dp"
                    tools:ignore="RtlHardcoded,RtlSymmetry" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:id="@+id/bbddname"
                    android:layout_weight="1"
                    android:textSize="24sp"
                    android:textColor="@android:color/holo_blue_dark" />
            </LinearLayout>

            <TextView
                android:text="@string/identificador_producto"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/textView6"
                android:textSize="18sp"
                android:textColor="@android:color/background_dark" />

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textPersonName"
                android:ems="10"
                android:id="@+id/idpro"
                tools:ignore="LabelFor" />

            <TextView
                android:text="@string/tipo"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/tipoview"
                android:textSize="18sp"
                android:textColor="@android:color/background_dark" />

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textPersonName"
                android:ems="10"
                android:id="@+id/tipo"
                tools:ignore="LabelFor" />

            <TextView
                android:text="@string/marca"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/marcaview"
                android:textSize="18sp"
                android:textColor="@android:color/background_dark" />

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textPersonName"
                android:ems="10"
                android:id="@+id/marca"
                tools:ignore="LabelFor" />

            <TextView
                android:text="@string/nombre"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/textView10"
                android:textSize="18sp"
                android:textColor="@android:color/background_dark" />

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textPersonName"
                android:ems="10"
                android:id="@+id/nom"
                tools:ignore="LabelFor" />

            <TextView
                android:text="@string/precio"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/textView11"
                android:textSize="18sp"
                android:textColor="@android:color/background_dark" />

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textPersonName"
                android:ems="10"
                android:id="@+id/preu"
                tools:ignore="LabelFor" />

            <TableLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="85dp"
                tools:ignore="RtlHardcoded">

                <TableRow
                    android:layout_width="match_parent"
                    android:layout_height="match_parent" >

                    <Button
                        android:text="@string/insertar"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:id="@+id/insertar"
                        android:layout_weight="1"
                        tools:ignore="ButtonStyle" />

                    <Button
                        android:text="@string/actualizar"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:id="@+id/actu"
                        android:layout_weight="1"
                        tools:ignore="ButtonStyle" />
                </TableRow>

                <TableRow
                    android:layout_width="match_parent"
                    android:layout_height="match_parent" >

                    <Button
                        android:text="@string/eliminar"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:id="@+id/eliminar"
                        android:layout_weight="1"
                        tools:ignore="ButtonStyle" />

                    <Button
                        android:text="@string/consultar"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:id="@+id/consultar"
                        android:layout_weight="1"
                        tools:ignore="ButtonStyle" />

                </TableRow>

            </TableLayout>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent" >

                <Button
                    android:text="Limpiar"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/limpiar"
                    android:textAlignment="center" />
            </TableRow>

            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <TextView
                    android:text="@string/id_tipo_marca_nombre_precio"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:id="@+id/textView8"
                    android:layout_weight="1" />
            </LinearLayout>

            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:id="@+id/resultadoConsulta"
                    android:layout_weight="1"
                    android:textSize="12sp" />
            </LinearLayout>

        </LinearLayout>
    </ScrollView>

</RelativeLayout>
