<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_intent"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.jordi.practicafinal.Intent">

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:ignore="UselessParent">

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            tools:ignore="UselessParent">

            <TextView
                android:text="@string/introduce_el_tel_fono"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/textView2"
                android:textAlignment="center"
                android:textColor="@android:color/background_dark"
                android:textSize="36sp" />

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="phone"
                android:ems="10"
                android:id="@+id/tlf"
                android:hint="@string/tel_fono"
                android:textAlignment="center" />

            <Button
                android:text="@string/enviar"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/enviar"
                android:layout_marginLeft="129dp"
                tools:ignore="RtlHardcoded" />
        </LinearLayout>
    </LinearLayout>

</RelativeLayout>
